--- a/jukeberry/templates/index.html
+++ b/jukeberry/templates/index.html
@@ -6,7 +6,7 @@
     function JukeCtrl($scope,$http) {
         $scope.play = function(song) {
             var data = {'path':song};
-            var url = 'http://localhost:5000/add';
+            var url = '{{url_for('add')}}';
             var method = 'POST';
             $http(
                 {method: method, url: url,data: JSON.stringify(data)}
@@ -17,7 +17,7 @@
             });
         };
         $scope.get_songs = function() {
-            var url = 'http://localhost:5000/get/songs';
+            var url = '{{url_for('get_songs')}}';
             var method = 'GET';
             $http(
                 {method: method, url: url}
