--- a/jukeberry/templates/index.html
+++ b/jukeberry/templates/index.html
@@ -1,6 +1,16 @@
 <!doctype html>
 <html ng-app>
  <head>
+  <style>
+ .clickable {
+    cursor:pointer;
+    color:blue;
+ }
+ .clickable:hover {
+    color:red;
+    text-decoration:underline;
+ }
+  </style>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.7/angular.min.js"></script>
   <script>
     function JukeCtrl($scope,$http) {
@@ -17,7 +27,7 @@
             });
         };
         $scope.get_songs = function() {
-            var url = '{{url_for('get_songs')}}';
+            var url = '{{url_for('get_songlist')}}';
             var method = 'GET';
             $http(
                 {method: method, url: url}
@@ -32,15 +42,13 @@
  </head>
  <body>
   <div ng-controller="JukeCtrl">
-   <button ng-click="play('/var/media/music/a/Mr. Bungle - Sixteen tons.mp3')">play '16 Tons'</button><br>
-   <button ng-click="get_songs()">get songs</button><br>
    <div id=songlist>
     <table>
      {% for songs in songlist.values() %}
      {% for song in songs %}
      <tr>
-        <td>{{song.artist}}</td>
-        <td><span ng-click="play('{{song.filename}}')">{{song.title}}</span></td>
+        <td><span class='artist'>{{song.artist}}</span></td>
+        <td><span class='title clickable' ng-click="play('{{song.filename}}')">{{song.title}}</span></td>
      </tr>
      {% endfor %}
      {% endfor %}
