--- a/jukeberry/templates/index.html
+++ b/jukeberry/templates/index.html
@@ -15,6 +15,11 @@
 }
 .song .name { color:red; }
 .song .artist { color:green; }
+.song .album { color:green; }
+.song .genre { color:green; }
+.song table.details { margin-left:5px; }
+.song table.details td.label { text-align:right; }
+
 #currsong li { list-style: none; }
   </style>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.7/angular.min.js"></script>
@@ -32,17 +37,29 @@
     <div id='currsong' class='section'>
      <span class='label'>Currently Playing:</span> 
         <ul ng-show='currsong'><li>
-          <span class='song'><span class='name'>{[currsong.title]}</span> <span class='time'>[{[currsong.secs|secs2hms:'h:m:s']}]</span><br />
-          <span class='artist'>{[currsong.artist]}</span></span>
+          <span class='song'>
+            <span class='name'>{[currsong.title]}</span> <span class='time'>[{[currsong.secs|secs2hms:'h:m:s']}]</span><br />
+            <table class='details'>
+              <tr><td class='label'>Artist(s):</td><td><span class='artist'>{[currsong.artist.join(",")]}</span></td></tr>
+              <tr><td class='label'>Album:</td><td><span class='album'>{[currsong.album]}</span></td></tr>
+              <!-- <tr><td class='label'>Genre:</td><td><span class='genre'>{[currsong.genre]}</span></td></tr> -->
+            </table><!-- class='details' -->
+          </span>
         </li></ul>
     </div><!-- id='currsong' -->
     <div id='playlist' class='section'>
      <span class='label'>Next Up:</span> <span class='time' ng-show='playlist.length'>[{[get_playlist_length()|secs2hms:'h:m:s']}]</span>
       <ol>
-          <li ng-repeat='song in playlist'><span class='song'>
-            <span class='name'>{[song.title]}</span> <span class='time'>[{[song.secs|secs2hms:'h:m:s']}]</span><br />
-            <span class='artist'>{[song.artist]}</span>
-          </span></li>
+          <li ng-repeat='song in playlist'>
+            <span class='song'>
+              <span class='name'>{[song.title]}</span> <span class='time'>[{[song.secs|secs2hms:'h:m:s']}]</span><br />
+              <table class='details'>
+                <tr><td class='label'>Artist(s):</td><td><span class='artist'>{[song.artist.join(",")]}</span></td></tr>
+                <tr><td class='label'>Album:</td><td><span class='album'>{[song.album]}</span></td></tr>
+                <!-- <tr><td class='label'>Genre:</td><td><span class='genre'>{[song.genre]}</span></td></tr> -->
+              </table><!-- class='details' -->
+            </span>
+          </li>
       </ol>
     </div><!-- id='playlist' -->
    </div>
