Added genres view.

--- a/jukeberry/templates/artists.html
+++ b/jukeberry/templates/artists.html
@@ -27,7 +27,7 @@
     <div id='songlist' class='section'>
      <div class='label'>Select an artist:</div>
       <ol>
-        <li ng-repeat='artist in artists.sort()'><a href='/{[artist]}/songs.html'>{[artist]}</a></li>
+        <li ng-repeat='artist in artists.sort()'><a href='/artist/{[artist]}/songs.html'>{[artist]}</a></li>
       </ol>
     </div><!-- id='songlist' -->
    </div>
