--- a/jukeberry/templates/genres.html
+++ b/jukeberry/templates/genres.html
@@ -27,7 +27,7 @@
     <div id='songlist' class='section'>
      <div class='label'>Select a genre:</div>
       <ol>
-        <li ng-repeat='genre in genres.sort()'><a href='/{[genre]}/songs.html'>{[genre]}</a></li>
+        <li ng-repeat='genre in genres.sort()'><a href='/genre/{[genre]}/songs.html'>{[genre]}</a></li>
       </ol>
     </div><!-- id='songlist' -->
    </div>
