Added song count to artist and genre view. Added redirect to main view after adding song.

--- a/jukeberry/templates/artists.html
+++ b/jukeberry/templates/artists.html
@@ -27,7 +27,10 @@
     <div id='songlist' class='section'>
      <div class='label'>Select an artist:</div>
       <ol>
-        <li ng-repeat='artist in artists.sort()'><a href='/artist/{[artist]}/songs.html'>{[artist]}</a></li>
+        <li ng-repeat='artist in artists.sort()'>
+          <a href='/artist/{[artist]}/songs.html'>{[artist]}</a><br />
+          <span class='count'>{[find_songs('artist',artist).length]} songs</span>
+        </li>
       </ol>
     </div><!-- id='songlist' -->
    </div>
