--- a/jukeberry/templates/songs.html
+++ b/jukeberry/templates/songs.html
@@ -11,13 +11,6 @@
     border: solid black thin;
     overflow: auto;
 }
-.song .name { color:red; }
-.song .artist { color:green; }
-.song .album { color:green; }
-.song .genre { color:green; }
-.song table.details { margin-left:5px; }
-.song table.details td.label { text-align:right; }
-ol.songs li { cursor:pointer; }
   </style>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.7/angular.min.js"></script>
   <script src="/JukeCtrl.js"></script>
@@ -32,8 +25,8 @@ ol.songs li { cursor:pointer; }
     <div id='songlist' class='section'>
      <div class='label'>Songs by {{value}}:</div>
       <ol class='songs'>
-        <li ng-repeat='song in find_songs("{{field}}","{{value.replace('"','\\"')}}") | orderBy:"title"'>
-            <span class='song' ng-click='play(song.artist,song.title);go("/");'>
+        <li class='clickable' ng-repeat='song in find_songs("{{field}}","{{value.replace('"','\\"')}}") | orderBy:"title"'>
+            <span class='song' ng-click='play(song.artist,song.title);'>
               <span class='name'>{[song.title]}</span>
               <table class='details'>
                 <tr><td class='label'>Artist(s):</td><td><span class='artist'>{[song.artist.join(",")]}</span></td></tr>
