--- a/jukeberry/templates/onepage.html
+++ b/jukeberry/templates/onepage.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html PUBLIC "-//WAPFORUM//DTD XHTML Mobile 1.0//EN" "http://www.wapforum.org/DTD/xhtml-mobile10.dtd">
 <html ng-app='jukeApp'>
  <head>
   <title>Jukeberry</title>
