Made onepage the default view.

--- a/jukeberry/templates/genres.html
+++ b/jukeberry/templates/genres.html
@@ -22,7 +22,7 @@
    <div id='title'>Jukeberry</div>
   </div><!-- id='head' -->
   <div id='body' class='raspi'>
-   <div><a href='/'>⇱ back</a></div>
+   <div><a href='/current.html'>⇱ back</a></div>
    <div ng-controller="JukeCtrl">
     <div id='songlist' class='section'>
      <div class='label'>Select a genre:</div>
