Added alwayson text to index.

--- a/jukeberry/templates/index.html
+++ b/jukeberry/templates/index.html
@@ -82,6 +82,9 @@
                </span>
              </li>
          </ol>
+        <li ng-show='alwayson.status'>
+            A random selection from {[alwayson.filters.length > 0 ? alwayson.filters.0.value : "Everything"]}
+        </li>
        </div><!-- id='playlist' -->
      </div><!-- id='current' -->
 
