--- a/jukeberry/templates/settings.html
+++ b/jukeberry/templates/settings.html
@@ -38,7 +38,7 @@
    </div>
 
    <div>
-    {[alwayson.filters.length > 0 ? alwayson.filters : "Everything"]}
+    A random selection from {[alwayson.filters.length > 0 ? alwayson.filters.0.value : "Everything"]}
    </div>
 
 <select ng-model="currattr">
