--- a/jukeberry/static/jukeberry.css
+++ b/jukeberry/static/jukeberry.css
@@ -5,6 +5,11 @@
  .clickable {
     cursor:pointer;
  }
+ .link {
+    cursor: pointer;
+    font-color: blue;
+    text-decoration: underline;
+ }
  .label {
     font-weight:bold;
  }
@@ -25,13 +30,19 @@
 
 /* Navbar CSS */
 #navbar {
-    height:20px;
+    /* height:20px; */
+    height:84px;
 }
 #navbar .active { color:red; }
 #navbar div.button { 
     float:left;
+    border: solid thin black;
     margin: 3px;
-    height:14px;
+    padding: 3px;
+    width: 82px;
+    height:28px;
+    font-size: 22px;
+    text-align: center;
 }
 #navbar div.clickable:hover { text-decoration:underline; color:blue; }
 
